--- a/css/styles.css
+++ b/css/styles.css
@@ -66,6 +66,31 @@ body {
 .envelope img{
     padding-top: 3px;
 }
+/* button*/
+.myButton {
+	box-shadow: 0px 10px 14px -7px #a4e271;
+	background:linear-gradient(to bottom, #89c403 5%, #77a809 100%);
+	background-color:#89c403;
+	border-radius:3px;
+	border:1px solid #74b807;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:13px;
+	font-weight:bold;
+	padding:6px 12px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #528009;
+}
+.myButton:hover {
+	background:linear-gradient(to bottom, #77a809 5%, #89c403 100%);
+	background-color:#77a809;
+}
+.myButton:active {
+	position:relative;
+	top:1px;
+}
 
 /* media query */
 @media (min-width:900px) {
