--- a/css/navigation.css
+++ b/css/navigation.css
@@ -44,6 +44,10 @@ nav{
     background-color: #72A603;
     margin: 0;
   }
+
+.nav_for_all{
+    padding: 0 10%;
+}
   
 .navitem{
     color: white;
