--- a/css/styles.css
+++ b/css/styles.css
@@ -67,8 +67,10 @@ body {
     padding-top: 3px;
 }
 /* button*/
+.add-post-btn{
+    text-align: center;
+}
 .myButton {
-	box-shadow: 0px 10px 14px -7px #a4e271;
 	background:linear-gradient(to bottom, #89c403 5%, #77a809 100%);
 	background-color:#89c403;
 	border-radius:3px;
@@ -82,6 +84,7 @@ body {
 	padding:6px 12px;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #528009;
+    margin: 0.5rem;
 }
 .myButton:hover {
 	background:linear-gradient(to bottom, #77a809 5%, #89c403 100%);
