--- a/css/contact.css
+++ b/css/contact.css
@@ -16,8 +16,11 @@ a {
 p{
     margin-top: 0.5rem;
 }
+.osobni{
+    margin-top: 2rem;
+}
 .pobocka{
-    margin-top: 15px;
+    margin-top: 2.5rem;
 }
 
 .mapouter{
