--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,9 @@ body {
     background-color: #F2ECE4;
     color: black;
 }
+.main{
+    padding: 0 10%;
+}
 
 .profile_picture img {
     border-radius: 50%;
@@ -29,25 +32,6 @@ body {
     padding: 5px 20px;
 }
 
-/* .button{
-    display: block;
-    text-decoration: none;
-    margin: 0 auto;
-    padding: 8px 10px;
-    background-color: #72A603;
-    border-radius: 20px;
-    width: 150px;
-    text-align: center;
-    margin-top: 20px;
-    color: white;
-    box-shadow: gray 1px 2px;
-}
-
-.button:hover,
-.button:focus,
-.button:active {
-    background-color: #1D5902;
-} */
 
 .social {
     width: 20%;
